@@ -1,6 +1,6 @@
-#	$NetBSD: Makefile,v 1.3 2005/05/23 17:44:25 kiyohara Exp $
+#	$NetBSD: Makefile,v 1.4 2005/09/05 18:54:10 kiyohara Exp $
 
-MAN=	intro.4 j6x0lcd.4 j6x0tp.4 psh3tp.4
+MAN=	intro.4 j6x0lcd.4 j6x0tp.4 psh3lcd.4 psh3tp.4
 
 MANSUBDIR=/hpcsh
 
