@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.514 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.515 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -89,3 +89,5 @@ Changes from NetBSD 3.0 to NetBSD 4.0:
 	sysinst: Added Spanish language translation. [xtraeme 20050826]
 	UFS: Add experimental support for file-backed extended attributes
 		on UFS1 file systems, adapted from FreeBSD.  [thorpej 20050828]
+	psh3lcd(4): Support LCD screen driver for PERSONA SH3 machines.
+		   [kiyohara 20050906]
